export class BilleteraVirtual {
    
}