export class CategoriaProd {

}