export enum EstadoPedido {
    EN_CONSTRUCCION,
    CONFIRMADO,
    ENVIADO
}