export enum EstadoProducto {
    PENDIENTE,
    EN_PREPARAION,
    LISTO
}