export interface Item {
    obtenerPrecio():number;
}