//import { MetodoPago } from "./MetodoPago";

import MetodoPago from "./MetodoPago";

export abstract class Tarjeta extends MetodoPago {
   
}