@startuml "TP Restaurante 'Fogón del Barrio' "

class Restaurante{
    - pedidosTotales:Pedido[]
    - estaciones: Estaciones

    + obtenerPedidosFinalizados():Pedido[]
    + getters y setters ()
}

abstract class Pedido{
    - cliente:Cliente,
    - pedidosItems:Item[]
    - estado:EstadoPedidos
    - metodoDePago:MetodoPago

    + agregarItem():void
    + eliminarItem():void
    + obtenerEstadosItems():void
    + getters y setters ()
    
}

class Salon extends Pedido implements Mozo{
    - mesa:Mesa
}

class Retiro extends Pedido implements Mozo{
    - horarioRetiro:DateTime
}

class Envio extends Pedido{
    - direccion:String
    - costo:number
}

enum EstadoProducto{
    PENDIENTE
    EN_PREPARACION
    LISTO
}
enum EstadoPedidos{
    EN_CONSTRUCCION
    CONFIRMADO
    ENVIADO
}


class Menu{
    - categoria:CategoriaMenu
    - itemsMenu:Item

    + getters y setters ()
}

interface Item{
    + obtenerPrecio():number
}

class Mesa{
}

interface Mozo{
    + eliminarItem():void
    + obtenerEstadoPedido(p:Pedido):void
}

class Producto {
    - nombre: string
    - precio: number
    - descripcion: string
    - categoria: CategoriaProd
    - estado: EstadoProducto

    + getters y setters ()
}

class Combo implements Item {
    - productosCombos:Producto[]
    - precioCombo:number
    - tipoDescuento:TipoDescuento
    + getters y setters ()
    + agregarProductoCombo(producto:Producto):void
    + quitarProductoCombo(producto:Producto):void
    + obtenerPrecioSinDescuento():number
    - calcularPrecioCombo():number
}

interface TipoDescuento {
   + aplicarDescuento(combo:Combo):number
}

class DescuentoFijo implements TipoDescuento {
    - monto:number
    + getters y setters ()
}

class DescuentoPorcentual implements TipoDescuento {
    - porcentaje:number
    + getters y setters ()
    + convertirPorcentajeADecimal():number
}


class categoriaMenu{
    - productos:Producto[]

    + obtenerProductos():Producto[]
    + getters y setters ()
}

class categoriaProd{
}

abstract class MetodoPago{
    - diaDescuento:DiasSemana[]

    + obtenerDescuentoSemana():number
    + realizarPago(p:Pedido):void
    + getters y setters ()
}

class Efectivo extends MetodoPago{
    - descuento:double

    + calcularDescuento():number
    + getters y setters ()
}
abstract class Tarjeta extends MetodoPago{}

class Debito extends Tarjeta{}

class Credito extends Tarjeta{}
class BilleteraVirtual extends MetodoPago{}




enum DiasSemana{
    LUNES
    MARTES
    MIERCOLES
    JUEVES
    VIERNES
    SABADO
    DOMINGO
}


abstract class Estaciones{
    - productos:Producto[]
    - categoria:

    + getters y setters ()
}

class Parrilla extends Estaciones{}
class CocinaFria extends Estaciones{}
class Barra extends Estaciones{}
class CocinaDulce extends Estaciones{}





Menu *-- categoriaMenu
Producto *--categoriaProd
Pedido .r.> Item
Menu .l.> Item
Salon *-- Mesa
Combo *-r-Producto
Pedido *-- MetodoPago
Restaurante *--r-- Estaciones
Restaurante *--- Pedido


